# claude-code-web

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/scratch/: Cargo.toml
crates/scratch/src/: lib.rs  main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/warcraftlogs-fetcher/: Cargo.toml
crates/warcraftlogs-fetcher/src/: main.rs
