[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
license = "MIT"

[workspace.dependencies]
# Common dependencies can be defined here
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
