[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"
chrono = "0.4"
anyhow = "1.0"
regex-lite = "0.1"
headless_chrome = { version = "1.0", features = ["fetch"] }
